--- a/resume/index.html
+++ b/resume/index.html
@@ -41,34 +41,32 @@
           <div class="job">
             <div class="job-overview">
               <div class="employer-info small-12 large-6 columns">
-                <h3><span itemprop="name">Hireology, Inc.</span></h3>
+                <h3><span itemprop="name">OppFi</span></h3>
               </div>
               <div class="location small-12 medium-6 large-2 columns" itemprop="address">Chicago, IL</div>
-              <div class="dates small-12 medium-6 large-4 columns"><i>February 2019 - present</i></div>
+              <div class="dates small-12 medium-6 large-4 columns"><i>March 2021 - present</i></div>
               <div class="small-12 columns" itemscope itemtype="http://schema.org/Role">
-                <h4 class="job-title" itemprop="roleName">Senior Software Engineer</h4>
+                <h4 class="job-title" itemprop="roleName">Engineering Manager</h4>
               </div>
             </div>  
           </div>
 
           <div class="job-details small-12 columns" itemprop="description">
-            <div><b>Senior Software Engineer:</b></div>
+            <div><b>Engineering Manager:</b></div>
               <ul>
-                <li>Worked as a part of a remote engineering team focused on job applications, job advertisement, and job board feeds</li>
+                <li>Worked as a part of a hybrid-work engineering team focused on procesing payments and other back-end processes</li>
                 <li>Participated in card grooming, card creation, and agile ceremonies</li>
-                <li>Implemented an Incident Management process for the company, including templated emails and update cadence</li>
-                <li>Led regular reviews of the Incident Management process, including drills, to maintain our knowledge of the process when we had a lack of incidents</li>
-                <li>Started a monthly "Lunch and Games" chat as an opportunity for the fully-remote Engineering team to spend some time socializing and networking with each other</li>
-              </ul>
+                <li></li>
+               </ul>
             <div><b>Key Skills and Knowledge:</b></div>
               <ul>
-                <li>Ruby on Rails, React</li>
-                <li>GitHub, CodeShip, NewRelic, Jira, Slack, Zoura</li>
+                <li>Ruby on Rails</li>
+                <li>GitHub, Jira, Slack, SumoLogic</li>
                 <li></li>
               </ul>
+            </div>
           </div>
         </div>
-      </div>
 
       <div class="card small-12 columns hide-for-print">
         <div class="education row">
@@ -123,6 +121,36 @@
             <h2>Previous Experience</h2>
           </div>
           
+          <div class="job">
+            <div class="job-overview">
+              <div class="employer-info small-12 large-6 columns">
+                <h3><span itemprop="name">Hireology, Inc.</span></h3>
+              </div>
+              <div class="location small-12 medium-6 large-2 columns" itemprop="address">Chicago, IL</div>
+              <div class="dates small-12 medium-6 large-4 columns"><i>February 2019 - May 2020</i></div>
+              <div class="small-12 columns" itemscope itemtype="http://schema.org/Role">
+                <h4 class="job-title" itemprop="roleName">Senior Software Engineer</h4>
+              </div>
+            </div>  
+          </div>
+
+          <div class="job-details small-12 columns" itemprop="description">
+            <div><b>Senior Software Engineer:</b></div>
+              <ul>
+                <li>Worked as a part of a remote engineering team focused on job applications, job advertisement, and job board feeds</li>
+                <li>Participated in card grooming, card creation, and agile ceremonies</li>
+                <li>Implemented an Incident Management process for the company, including templated emails and update cadence</li>
+                <li>Led regular reviews of the Incident Management process, including drills, to maintain our knowledge of the process when we had a lack of incidents</li>
+                <li>Started a monthly "Lunch and Games" chat as an opportunity for the fully-remote Engineering team to spend some time socializing and networking with each other</li>
+              </ul>
+            <div><b>Key Skills and Knowledge:</b></div>
+              <ul>
+                <li>Ruby on Rails, React</li>
+                <li>GitHub, CodeShip, NewRelic, Jira, Slack, Zoura</li>
+                <li></li>
+              </ul>
+            </div>
+          </div>
           <div class="job">
             <div class="job-overview">
               <div class="employer-info small-12 large-6 columns">
